syntax = "proto3";

package example;

message Contracts {
  repeated Contract contracts = 1;
}

message Contract {
    string address = 1;
    uint64 blockNumber = 2;
    string timestamp = 3;
    uint64 ordinal = 4;
}

message Swaps {
  repeated Swap swaps = 1;
}

message Swap {
    string id = 1;
    string sender = 2;
    string recipient = 3;
    string amount0 = 4;
    string amount1 = 5;
    string sqrtPriceX96 = 6;
    string liquidity = 7;
    string tick = 8;
    int64 blockNumber = 9;
    int64 blockTimestamp = 10;
    string transactionHash = 11;
    uint64 ordinal = 12;
}